--- a/distribution/docs/src/main/resources/content/_quickstart/quickstart-certificates.adoc
+++ b/distribution/docs/src/main/resources/content/_quickstart/quickstart-certificates.adoc
@@ -45,9 +45,9 @@ For *NIX, use the `CertNew.sh` script.
 
 where:
 
-* `<cn>` represents a fully qualified common name (e.g. "<FQDN>", where <FQDN> could be something like cluster.yoyo.com)
-* `<dn>` represents a distinguished name as a comma-delimited string (e.g. "c=US, st=California, o=Yoyodyne, l=San Narciso, cn=<FQDN>")
-* `<tag:name,tag:name,...>` represents optional subject alternative names to be added to the generated certificate (e.g. "DNS:<FQDN>,DNS:node1.<FQDN>,DNS:node2.<FQDN>"). The format for subject alternative names is similar to the OpenSSL X509 configuration format. Supported tags are:
+* `<cn>` represents a fully qualified common name (such as "<FQDN>", where <FQDN> could be something like cluster.yoyo.com)
+* `<dn>` represents a distinguished name as a comma-delimited string (such as "c=US, st=California, o=Yoyodyne, l=San Narciso, cn=<FQDN>")
+* `<tag:name,tag:name,...>` represents optional subject alternative names to be added to the generated certificate (such as "DNS:<FQDN>,DNS:node1.<FQDN>,DNS:node2.<FQDN>"). The format for subject alternative names is similar to the OpenSSL X509 configuration format. Supported tags are:
 ** `email` - email subject
 ** `URI` - uniformed resource identifier
 ** `RID` - registered id
@@ -66,9 +66,9 @@ For Windows, use the `CertNew.cmd` script.
 
 where:
 
-* `<cn>` represents a fully qualified common name (e.g. "<FQDN>", where <FQDN> could be something like cluster.yoyo.com)
-* `<dn>` represents a distinguished name as a comma-delimited string (e.g. "c=US, st=California, o=Yoyodyne, l=San Narciso, cn=<FQDN>")
-* `<tag:name,tag:name,...>` represents optional subject alternative names to be added to the generated certificate (e.g. "DNS:<FQDN>,DNS:node1.<FQDN>,DNS:node2.<FQDN>"). The format for subject alternative names is similar to the OpenSSL X509 configuration format. Supported tags are:
+* `<cn>` represents a fully qualified common name (such as"<FQDN>", where <FQDN> could be something like cluster.yoyo.com)
+* `<dn>` represents a distinguished name as a comma-delimited string (such as "c=US, st=California, o=Yoyodyne, l=San Narciso, cn=<FQDN>")
+* `<tag:name,tag:name,...>` represents optional subject alternative names to be added to the generated certificate (such as "DNS:<FQDN>,DNS:node1.<FQDN>,DNS:node2.<FQDN>"). The format for subject alternative names is similar to the OpenSSL X509 configuration format. Supported tags are:
 ** `email` - email subject
 ** `URI` - uniformed resource identifier
 ** `RID` - registered id
