--- a/distribution/docs/src/main/resources/content/_architectures/_queries/filterbuilder-api.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_queries/filterbuilder-api.adoc
@@ -32,4 +32,4 @@ Filters use a number of boolean operators.
 
 Filters can be based on specific attributes.
 
-`FilterBuilder.attribute(String attributeName)`:: begins a fluent API for creating an Attribute-based Filter, i.e., a Filter that matches on Metacards with Attributes of a particular value.
+`FilterBuilder.attribute(String attributeName)`:: begins a fluent API for creating an Attribute-based Filter, which is a Filter that matches on Metacards with Attributes of a particular value.
