--- a/distribution/docs/src/main/resources/content/_introduction/_coreConcepts/resources-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_introduction/_coreConcepts/resources-intro.adoc
@@ -7,13 +7,13 @@
 
 == {title}
 
-The Catalog Framework can interface with storage providers to provide storage of resources to specific types of storage, e.g., file system, relational database, XML database.
+The Catalog Framework can interface with storage providers to provide storage of resources to specific types of storage, such as file system, relational database, XML database.
 A default file system implementation is provided by default.
 
-Storage providers act as a proxy between the Catalog Framework and the mechanism storing the content.
-Storage providers expose the storage mechanism to the Catalog Framework.
+Storage providers act as a proxy between the Catalog Framework and the mechanism storing the content.
+Storage providers expose the storage mechanism to the Catalog Framework.
 Storage plugins provide pluggable functionality that can be executed either immediately before or immediately after content has been stored or updated.
 
-Storage providers provide the capability to the Catalog Framework to create, read, update, and delete resources in the content repository.
+Storage providers provide the capability to the Catalog Framework to create, read, update, and delete resources in the content repository.
 
 See <<{managing-prefix}data_management,Data Management>> for more information on specific file types supported by ${branding}.
