--- a/distribution/docs/src/main/resources/content/_managing/_configuring/configuration-files.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/configuration-files.adoc
@@ -16,7 +16,8 @@ The ${admin-console} can be re-enabled for additional configuration changes.
 ====
 
 In an environment hardened for security purposes, access to the ${admin-console} or the ${command-console} might be denied and using the latter in such an environment may cause configuration errors.
-It is necessary to configure ${branding} (e.g., providers, Schematron rulesets, etc.) using `.config` files.
+For this reason,`.config` files (such as providers, Schematron rulesets, etc.)
+are necessary to configure ${branding}.
 
 A template file is provided for some configurable ${branding} items so that they can be copied/renamed then modified with the appropriate settings.
 
@@ -24,5 +25,5 @@ A template file is provided for some configurable ${branding} items so that they
 ====
 If the ${admin-console} is enabled again, all of the configuration done via `.config` files will be loaded and displayed.
 However, note that the name of the `.config` file is not used in the ${admin-console}.
-Rather, a universally unique identifier (UUID) is added when the ${branding} item was created and displays this UUID in the console (e.g., `OpenSearchSource.112f298e-26a5-4094-befc-79728f216b9b`)
+Rather, a universally unique identifier (UUID) is added when the ${branding} item was created and displays this UUID in the console (for example, `OpenSearchSource.112f298e-26a5-4094-befc-79728f216b9b`)
 ====
