--- a/distribution/docs/src/main/resources/content/_managing/_configuring/configuring-guest-access.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/configuring-guest-access.adoc
@@ -12,7 +12,7 @@ Unauthenticated access to a secured ${branding} system is provided by the *Guest
 By default, ${branding} allows guest access.
 
 Because ${branding} does not know the identity of a Guest user, it cannot assign security attributes to the Guest.
-The administrator must configure the attributes and values (i.e. the "claims") to be assigned to Guests.
+The administrator must configure the attributes and values (the "claims") to be assigned to Guests.
 The Guest Claims become the default minimum attributes for every user, both authenticated and unauthenticated.
 Even if a user claim is more restrictive, the guest claim will grant access, so ensure the guest claim is only as permissive as necessary.
 
