--- a/distribution/docs/src/main/resources/content/_managing/_configuring/http-port.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/http-port.adoc
@@ -10,7 +10,7 @@
 To change HTTP or HTTPS ports from the default values, edit the `custom.system.properties` file.
 
 . Open the file at ${home_directory}/etc/custom.system.properties
-. Change the value after the `=` to the desired port number(s):
+. Change the value after the `=` to the desired port numbers:
 .. `org.codice.ddf.system.httpsPort=8993` to `org.codice.ddf.system.httpsPort=<PORT>`
 .. `org.codice.ddf.system.httpPort=8181` to `org.codice.ddf.system.httpPort=<PORT>`
 . Restart ${branding} for changes to take effect.
