--- a/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-api.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-api.adoc
@@ -105,7 +105,7 @@ The Endpoint bundle contains a Web service that exposes the interface to retriev
 The Endpoint calls the `CatalogFramework` to execute the operations of its specification.
 The `CatalogFramework` relies on the Sources to execute the actual resource retrieval.
 Optional `PreResource` and `PostResource` Catalog Plugins may be invoked by the `CatalogFramework` to modify the resource retrieval request/response prior to the Catalog Provider processing the request and providing the response.
-It is possible to retrieve resources from specific remote Sources by specifying the site name(s) in the request.
+It is possible to retrieve resources from specific remote Sources by specifying the site names in the request.
 
 .Product Caching
 Product Caching is enabled by default.
