--- a/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-framework-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_catalogFrameworks/catalog-framework-intro.adoc
@@ -162,7 +162,8 @@ The Endpoint calls the `CatalogFramework` to execute the operations of its speci
 The `CatalogFramework` relies on the `CatalogProvider` to execute the actual query.
 Optional PreQuery and PostQuery Catalog Plugins may be invoked by the `CatalogFramework` to modify the query request/response prior to the Catalog Provider processing the query request and providing the query response.
 If a `CatalogProvider` is not configured and no other remote Sources are configured, a fault will be returned.
-It is possible to have only remote Sources configured and no local `CatalogProvider` configured and be able to execute queries to specific remote Sources by specifying the site name(s) in the query request.
+It is possible to have only remote Sources configured and no local `CatalogProvider` configured and be able to execute queries to specific remote Sources by specifying the site names in the query request.
+
 
 ==== Product Caching
 
