--- a/distribution/docs/src/main/resources/content/_managing/_configuring/landing-page.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/landing-page.adoc
@@ -8,7 +8,7 @@
 == {title}
 
 The ((Landing Page)) is the first page presented to users of ${branding}.
-It is customizable to allow adding organizationally-relevant content.
+It is customizable to allow adding organizationally relevant content.
 
 === Installing the Landing Page
 
